--- a/ENSO_CountApp_REM_Default_Spanish_CRS.html
+++ b/ENSO_CountApp_REM_Default_Spanish_CRS.html
@@ -234,21 +234,15 @@ OldTravelsa</th>
 </tr>
 <tr>
 <th align="left" valign="top">Dirección</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">Rúa Lope Gómez de Marzoa, s/n, 15782 Santiago de Compostela, La Coruña, Spain</td>
 </tr>
 <tr>
 <th align="left" valign="top">Teléfono</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">+34 881 81 67 00</td>
 </tr>
 <tr>
 <th align="left" valign="top">Fax</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">etse.secredireccion@usc.gal</td>
 </tr>
 <tr>
 <th align="left" valign="top">Comentarios</th>
@@ -301,21 +295,16 @@ Grupo 2B</th>
 </tr>
 <tr>
 <th align="left" valign="top">Dirección</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">Rúa Lope Gómez de Marzoa, s/n, 15782
+<br />Santiago de Compostela</td>
 </tr>
 <tr>
 <th align="left" valign="top">Teléfono</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">+34 881 81 67 00</td>
 </tr>
 <tr>
 <th align="left" valign="top">Fax</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">pablo.garcia.fuentes@rai.usc.es</td>
 </tr>
 <tr>
 <th align="left" valign="top">Comentarios</th>
@@ -476,12 +465,89 @@ Visión general</h1><a name="SEC-0014" />
 <h2 align="left">2.1 
 Introducción</h2><a name="SEC-0015" />
 <h2 align="left">2.2 
-Objetivos</h2><a name="OBJ-0001" />
+Objetivos</h2><a name="OBJ-0002" />
+<table border="1" width="100%">
+<tr bgcolor="#c8e0e0">
+<th align="left" valign="top">OBJ-0002</th>
+<th align="left" valign="top" width="100%">
+Sistema de gestión de usuarios</th>
+</tr>
+<tr>
+<th align="left" valign="top">Versión</th>
+<td align="left" valign="top">1.0 
+			( 12/12/2023 )
+        </td>
+</tr>
+<tr>
+<th align="left" valign="top">Autores</th>
+<td align="left" valign="top" colspan="1">
+<ul>
+<li>
+<a href="#STK-0004">
+Aarón García Filgueira</a>
+<br />
+</li>
+<li>
+<a href="#STK-0003">
+Pablo García Fuentes</a>
+<br />
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Fuentes</th>
+<td align="left" valign="top" colspan="1">
+<ul>
+<li>
+<a href="#STK-0001">
+José Ángel Taboada Gonzalez</a>
+<br />
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Descripción</th>
+<td align="left" valign="top">
+    El sistema deberá 
+<em>
+permitir el registro y eliminación de usuarios, acceder a la configuración sobre privacidad, métodos de pago y demás información personal</em>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Subobjetivos</th>
+<td align="left" valign="top">Ninguno</td>
+</tr>
+<tr>
+<th align="left" valign="top">Importancia</th>
+<td align="left" valign="top" colspan="1">vital</td>
+</tr>
+<tr>
+<th align="left" valign="top">Urgencia</th>
+<td align="left" valign="top" colspan="1">inmediatamente</td>
+</tr>
+<tr>
+<th align="left" valign="top">Estado</th>
+<td align="left" valign="top" colspan="1">pendiente de validación</td>
+</tr>
+<tr>
+<th align="left" valign="top">Estabilidad</th>
+<td align="left" valign="top" colspan="1">alta</td>
+</tr>
+<tr>
+<th align="left" valign="top">Comentarios</th>
+<td align="left" valign="top" colspan="1">
+Ninguno</td>
+</tr>
+</table>
+<p />
+<a name="OBJ-0001" />
 <table border="1" width="100%">
 <tr bgcolor="#c8e0e0">
 <th align="left" valign="top">OBJ-0001</th>
 <th align="left" valign="top" width="100%">
-Sistema de registro de pagos</th>
+Sistema de registro de gastos</th>
 </tr>
 <tr>
 <th align="left" valign="top">Versión</th>
@@ -492,13 +558,30 @@ Sistema de registro de pagos</th>
 <tr>
 <th align="left" valign="top">Autores</th>
 <td align="left" valign="top" colspan="1">
-<font color="red"><b>?</b></font>
+<ul>
+<li>
+<a href="#STK-0004">
+Aarón García Filgueira</a>
+<br />
+</li>
+<li>
+<a href="#STK-0003">
+Pablo García Fuentes</a>
+<br />
+</li>
+</ul>
 </td>
 </tr>
 <tr>
 <th align="left" valign="top">Fuentes</th>
 <td align="left" valign="top" colspan="1">
-<font color="red"><b>?</b></font>
+<ul>
+<li>
+<a href="#STK-0001">
+José Ángel Taboada Gonzalez</a>
+<br />
+</li>
+</ul>
 </td>
 </tr>
 <tr>
@@ -506,7 +589,8 @@ Sistema de registro de pagos</th>
 <td align="left" valign="top">
     El sistema deberá 
 <em>
-<font color="red"><b>PD</b></font>
+permitir el registro de un gasto configurando sus particicpantes, calculandoa automáticamente el balance y registrando una fecha asociada a la operación. También ofrecerá la posibilidad de adjuntar un justificante y/o asociar el gasto a una actividad existinte en el sistema. Para cada gasto se pueden consultar saldos y deudas; y registrar nuevos pagos de deuda.
+<br />
 </em>
 </td>
 </tr>
@@ -516,27 +600,189 @@ Sistema de registro de pagos</th>
 </tr>
 <tr>
 <th align="left" valign="top">Importancia</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">vital</td>
 </tr>
 <tr>
 <th align="left" valign="top">Urgencia</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">inmediatamente</td>
 </tr>
 <tr>
 <th align="left" valign="top">Estado</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">pendiente de validación</td>
 </tr>
 <tr>
 <th align="left" valign="top">Estabilidad</th>
+<td align="left" valign="top" colspan="1">alta</td>
+</tr>
+<tr>
+<th align="left" valign="top">Comentarios</th>
 <td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
+Ninguno</td>
+</tr>
+</table>
+<p />
+<a name="OBJ-0003" />
+<table border="1" width="100%">
+<tr bgcolor="#c8e0e0">
+<th align="left" valign="top">OBJ-0003</th>
+<th align="left" valign="top" width="100%">
+Sistema de gestión de chats y grupos</th>
+</tr>
+<tr>
+<th align="left" valign="top">Versión</th>
+<td align="left" valign="top">1.0 
+			( 12/12/2023 )
+        </td>
+</tr>
+<tr>
+<th align="left" valign="top">Autores</th>
+<td align="left" valign="top" colspan="1">
+<ul>
+<li>
+<a href="#STK-0004">
+Aarón García Filgueira</a>
+<br />
+</li>
+<li>
+<a href="#STK-0003">
+Pablo García Fuentes</a>
+<br />
+</li>
+</ul>
 </td>
+</tr>
+<tr>
+<th align="left" valign="top">Fuentes</th>
+<td align="left" valign="top" colspan="1">
+<ul>
+<li>
+<a href="#STK-0001">
+José Ángel Taboada Gonzalez</a>
+<br />
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Descripción</th>
+<td align="left" valign="top">
+    El sistema deberá 
+<em>
+permitir la creación y eliminación de grupos, la inclusión y eliminación de miembros y la gestión de anfitriones. Existirá también la opción de bloquear usuarios o restringir su participación en algunas actividades.
+<br />
+<br />Cada grupo deberá integrar un chat que maneje envio de mensajes y sus respectivas notificaciones. </em>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Subobjetivos</th>
+<td align="left" valign="top">Ninguno</td>
+</tr>
+<tr>
+<th align="left" valign="top">Importancia</th>
+<td align="left" valign="top" colspan="1">vital</td>
+</tr>
+<tr>
+<th align="left" valign="top">Urgencia</th>
+<td align="left" valign="top" colspan="1">inmediatamente</td>
+</tr>
+<tr>
+<th align="left" valign="top">Estado</th>
+<td align="left" valign="top" colspan="1">pendiente de validación</td>
+</tr>
+<tr>
+<th align="left" valign="top">Estabilidad</th>
+<td align="left" valign="top" colspan="1">alta</td>
+</tr>
+<tr>
+<th align="left" valign="top">Comentarios</th>
+<td align="left" valign="top" colspan="1">
+Ninguno</td>
+</tr>
+</table>
+<p />
+<a name="OBJ-0004" />
+<table border="1" width="100%">
+<tr bgcolor="#c8e0e0">
+<th align="left" valign="top">OBJ-0004</th>
+<th align="left" valign="top" width="100%">
+Sistema de gestión de actividades</th>
+</tr>
+<tr>
+<th align="left" valign="top">Versión</th>
+<td align="left" valign="top">1.0 
+			( 12/12/2023 )
+        </td>
+</tr>
+<tr>
+<th align="left" valign="top">Autores</th>
+<td align="left" valign="top" colspan="1">
+<ul>
+<li>
+<a href="#STK-0004">
+Aarón García Filgueira</a>
+<br />
+</li>
+<li>
+<a href="#STK-0003">
+Pablo García Fuentes</a>
+<br />
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Fuentes</th>
+<td align="left" valign="top" colspan="1">
+<ul>
+<li>
+<a href="#STK-0001">
+José Ángel Taboada Gonzalez</a>
+<br />
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Descripción</th>
+<td align="left" valign="top">
+    El sistema deberá 
+<em>
+permitir la creación y programación de actividades para una fecha determinada que se indicará en el calendario.
+<br />Sobre las actividades se podrán publicar reseñas, esetablecer una puntuación y consultar las opiniones que hayan publicado otros usuarios.</em>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Subobjetivos</th>
+<td align="left" valign="top">
+<ul>
+<a name="OBJ-0005" />
+<li>
+<b>[OBJ-0005] 
+Sistema de recomendaciones autamáticas.</b>:
+		
+    El sistema deberá 
+<em>
+recomendar a los usuarios de manera activa actividades en función de sus valoraciones y de las preferencias prestablecidas por los administradores. </em> <ul>
+</ul>
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Importancia</th>
+<td align="left" valign="top" colspan="1">vital</td>
+</tr>
+<tr>
+<th align="left" valign="top">Urgencia</th>
+<td align="left" valign="top" colspan="1">inmediatamente</td>
+</tr>
+<tr>
+<th align="left" valign="top">Estado</th>
+<td align="left" valign="top" colspan="1">pendiente de validación</td>
+</tr>
+<tr>
+<th align="left" valign="top">Estabilidad</th>
+<td align="left" valign="top" colspan="1">alta</td>
 </tr>
 <tr>
 <th align="left" valign="top">Comentarios</th>
@@ -800,7 +1046,7 @@ Diagrama de sistema</h3><a name="GRF-0003" />
 Diagrama de sistema</p>
 <a name="SEC-0023" />
 <h4 align="left">3.2.2.1 
-Subsistema N</h4><a name="PRG-0006" />
+Subsistema usuarios</h4><a name="PRG-0006" />
 <p>Se define aquí el objetivo d este subsistema (paquete). 1 objetivo por paquete. Hay que relacionarlos --&gt; Dependencias</p>
 <a name="FRQ-0001" />
 <table border="1" width="100%">
@@ -1155,7 +1401,13 @@ Ninguno</td>
 </tr>
 </table>
 <p />
-<a name="SEC-0022" />
+<a name="SEC-0024" />
+<h4 align="left">3.2.2.2 
+Subsistema gastos</h4><a name="SEC-0025" />
+<h4 align="left">3.2.2.3 
+Subsistema chat y grupos</h4><a name="SEC-0026" />
+<h4 align="left">3.2.2.4 
+Subsistema actividades</h4><a name="SEC-0022" />
 <h2 align="left">3.3 
 Requisitos no funcionales</h2><a name="GRF-0005" />
 <p align="center">
@@ -1285,9 +1537,7 @@ TFEA</th>
 </tr>
 <tr>
 <th align="left" valign="top">Lugar</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">Aula Practicas</td>
 </tr>
 <tr><th align="left" valign="top">Asistentes</th>
 <td align="left" valign="top">
@@ -1309,8 +1559,8 @@ Pablo Guerrica-Echevarría Basterrechea </a>
 </tr>
 <tr>
 <th align="left" valign="top">Resultados</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
+<td align="left" valign="top" colspan="1">Establecidos los objetivos principales de la práctica y comentado el material relacionado con ella en el aula.
+<br />
 </td>
 </tr>
 <tr>
@@ -1337,9 +1587,7 @@ Creación del documento</th>
 </tr>
 <tr>
 <th align="left" valign="top">Lugar</th>
-<td align="left" valign="top" colspan="1">
-<font color="red"><b>PD</b></font>
-</td>
+<td align="left" valign="top" colspan="1">Aula Practicas</td>
 </tr>
 <tr><th align="left" valign="top">Asistentes</th>
 <td align="left" valign="top">
@@ -1362,6 +1610,54 @@ Pablo Guerrica-Echevarría Basterrechea </a>
 <tr>
 <th align="left" valign="top">Resultados</th>
 <td align="left" valign="top" colspan="1">Creación del documento base y reparto de funciones entre los miembros del grupo.</td>
+</tr>
+<tr>
+<th align="left" valign="top">Comentarios</th>
+<td align="left" valign="top" colspan="1">
+Ninguno</td>
+</tr>
+</table>
+<p />
+<a name="MET-0003" />
+<table border="1" width="100%">
+<tr bgcolor="#c8e0e0">
+<th align="left" valign="top">Reunión</th>
+<th align="left" valign="top" width="100%">
+Segunda Sesion</th>
+</tr>
+<tr>
+<th align="left" valign="top">Fecha</th>
+<td align="left" valign="top" colspan="1">12/12/2023</td>
+</tr>
+<tr>
+<th align="left" valign="top">Hora</th>
+<td align="left" valign="top" colspan="1">13:10</td>
+</tr>
+<tr>
+<th align="left" valign="top">Lugar</th>
+<td align="left" valign="top" colspan="1">Aula Practicas</td>
+</tr>
+<tr><th align="left" valign="top">Asistentes</th>
+<td align="left" valign="top">
+<ul>
+<li>
+<a href="#STK-0004" title="Aarón García Filgueira">
+Aarón García Filgueira</a>
+</li>
+<li>
+<a href="#STK-0003" title="Pablo García Fuentes">
+Pablo García Fuentes</a>
+</li>
+<li>
+<a href="#STK-0002" title="Pablo Guerrica-Echevarría Basterrechea">
+Pablo Guerrica-Echevarría Basterrechea </a>
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Resultados</th>
+<td align="left" valign="top" colspan="1">Se comentan los apartados desarrollados durante el transcurso de la semana y se ponen en común en un único archivo. Se  establecen los objetivos para los próximos días de cara a organizar el trabajo de todos los miembros del equipo.</td>
 </tr>
 <tr>
 <th align="left" valign="top">Comentarios</th>
