--- a/ENSO_CountApp_REM_Default_Spanish_CRS.html
+++ b/ENSO_CountApp_REM_Default_Spanish_CRS.html
@@ -4314,15 +4314,7 @@ Mostrar correctamente los elementos de una actividad y obtener reseñas de otras 
 <p />
 <a name="SEC-0022" />
 <h2 align="left">3.3 
-Requisitos no funcionales</h2><a name="GRF-0005" />
-<p align="center">
-<img src=".\Imagenes\TaxonomiaRnF.png" title=".\Imagenes\TaxonomiaRnF.png" />
-</p>
-<p align="center">
-<b>Figura 1</b>:
-                
-Taxonomía</p>
-<a name="NFR-0001" />
+Requisitos no funcionales</h2><a name="NFR-0001" />
 <table border="1" width="100%">
 <tr bgcolor="#c8e0e0">
 <th align="left" valign="top">NFR-0001</th>
@@ -4363,14 +4355,14 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
-                                [OBJ-0002] 
-Sistema de gestión de usuarios</a>
-</li>
-<li>
 <a href="#OBJ-0001" title="Sistema de gestión de gastos">
                                 [OBJ-0001] 
 Sistema de gestión de gastos</a>
+</li>
+<li>
+<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
+                                [OBJ-0002] 
+Sistema de gestión de usuarios</a>
 </li>
 </td>
 </tr>
@@ -4448,9 +4440,9 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#OBJ-0001" title="Sistema de gestión de gastos">
-                                [OBJ-0001] 
-Sistema de gestión de gastos</a>
+<a href="#OBJ-0004" title="Sistema de gestión de actividades">
+                                [OBJ-0004] 
+Sistema de gestión de actividades</a>
 </li>
 <li>
 <a href="#OBJ-0002" title="Sistema de gestión de usuarios">
@@ -4458,19 +4450,19 @@ Sistema de gestión de gastos</a>
 Sistema de gestión de usuarios</a>
 </li>
 <li>
+<a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
+                                [OBJ-0005] 
+Sistema de recomendaciones automáticas</a>
+</li>
+<li>
 <a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
                                 [OBJ-0003] 
 Sistema de gestión de chats y grupos</a>
 </li>
 <li>
-<a href="#OBJ-0004" title="Sistema de gestión de actividades">
-                                [OBJ-0004] 
-Sistema de gestión de actividades</a>
-</li>
-<li>
-<a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
-                                [OBJ-0005] 
-Sistema de recomendaciones automáticas</a>
+<a href="#OBJ-0001" title="Sistema de gestión de gastos">
+                                [OBJ-0001] 
+Sistema de gestión de gastos</a>
 </li>
 </td>
 </tr>
@@ -4551,9 +4543,9 @@ José Ángel Taboada Gonzalez</a>
 Sistema de gestión de chats y grupos</a>
 </li>
 <li>
-<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
-                                [OBJ-0002] 
-Sistema de gestión de usuarios</a>
+<a href="#OBJ-0004" title="Sistema de gestión de actividades">
+                                [OBJ-0004] 
+Sistema de gestión de actividades</a>
 </li>
 <li>
 <a href="#OBJ-0001" title="Sistema de gestión de gastos">
@@ -4561,9 +4553,9 @@ Sistema de gestión de usuarios</a>
 Sistema de gestión de gastos</a>
 </li>
 <li>
-<a href="#OBJ-0004" title="Sistema de gestión de actividades">
-                                [OBJ-0004] 
-Sistema de gestión de actividades</a>
+<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
+                                [OBJ-0002] 
+Sistema de gestión de usuarios</a>
 </li>
 <li>
 <a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
@@ -4649,14 +4641,14 @@ José Ángel Taboada Gonzalez</a>
 Sistema de gestión de gastos</a>
 </li>
 <li>
-<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
-                                [OBJ-0002] 
-Sistema de gestión de usuarios</a>
-</li>
-<li>
 <a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
                                 [OBJ-0003] 
 Sistema de gestión de chats y grupos</a>
+</li>
+<li>
+<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
+                                [OBJ-0002] 
+Sistema de gestión de usuarios</a>
 </li>
 <li>
 <a href="#OBJ-0004" title="Sistema de gestión de actividades">
