--- a/ENSO_CountApp_REM_Default_Spanish_CRS.html
+++ b/ENSO_CountApp_REM_Default_Spanish_CRS.html
@@ -1067,6 +1067,57 @@ Ninguno</td>
 </tr>
 </table>
 <p />
+<a name="ACT-0002" />
+<table border="1" width="100%">
+<tr bgcolor="#c8e0e0">
+<th align="left" valign="top">ACT-0002</th>
+<th align="left" valign="top" width="100%">
+Administrador</th>
+</tr>
+<tr>
+<th align="left" valign="top">Versión</th>
+<td align="left" valign="top">1.0 
+			( 19/12/2023 )
+        </td>
+</tr>
+<tr>
+<th align="left" valign="top">Autores</th>
+<td align="left" valign="top" colspan="1">
+<ul>
+<li>
+<a href="#STK-0004">
+Aarón García Filgueira</a>
+<br />
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Fuentes</th>
+<td align="left" valign="top" colspan="1">
+<ul>
+<li>
+<a href="#STK-0001">
+José Ángel Taboada Gonzalez</a>
+<br />
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Descripción</th>
+<td align="left" valign="top">
+    Este actor representa
+<em>el rol que adquiere un usuario en relación a un grupo de gasto creado por él.</em>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Comentarios</th>
+<td align="left" valign="top" colspan="1">
+Ninguno</td>
+</tr>
+</table>
+<p />
 <a name="SEC-0021" />
 <h3 align="left">3.2.2 
 Diagrama de sistema</h3><a name="GRF-0003" />
@@ -1702,6 +1753,146 @@ Cerrar sesión</th>
 <th align="left" valign="top">Fuentes</th>
 <td align="left" valign="top" colspan="2">
 <font color="red"><b>?</b></font>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Dependencias</th>
+<td align="left" valign="top" colspan="2">Ninguno</td>
+</tr>
+<tr>
+<th align="left" valign="top">Descripción</th>
+<td colspan="2">
+    El sistema deberá comportarse tal como se describe en el siguiente
+
+    caso de uso cuando
+<em>
+<font color="red"><b>PD</b></font>
+</em>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Precondición</th>
+<td align="left" valign="top" colspan="2">
+<font color="red"><b>PD</b></font>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top" rowspan="2">Secuencia normal</th>
+<th align="center" valign="top">Paso</th>
+<th align="left" valign="top" width="100%">Acción</th>
+</tr>
+<tr>
+<td align="center" valign="top">
+                        -
+                    </td>
+<td>
+                        -
+                    </td>
+</tr>
+<tr>
+<th align="left" valign="top">Postcondición</th>
+<td align="left" valign="top" colspan="2">
+<font color="red"><b>PD</b></font>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top" rowspan="2">Excepciones</th>
+<th align="center" valign="top">Paso</th>
+<th align="left" valign="top" width="100%">Acción</th>
+</tr>
+<tr>
+<td align="center" valign="top">
+                        -
+                    </td>
+<td>
+                        -
+                    </td>
+</tr>
+<tr>
+<th align="left" valign="top" rowspan="2">Rendimiento</th>
+<th align="center" valign="top">Paso</th>
+<th align="left" valign="top" width="100%">Tiempo máximo</th>
+</tr>
+<tr>
+<td align="center" valign="top">
+                        -
+                    </td>
+<td>
+                        -
+                    </td>
+</tr>
+<tr>
+<th align="left" valign="top">Frecuencia esperada</th>
+<td colspan="2">
+<font color="red"><b>PD</b></font>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Importancia</th>
+<td align="left" valign="top" colspan="2">
+<font color="red"><b>PD</b></font>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Urgencia</th>
+<td align="left" valign="top" colspan="2">
+<font color="red"><b>PD</b></font>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Estado</th>
+<td align="left" valign="top" colspan="2">
+<font color="red"><b>PD</b></font>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Estabilidad</th>
+<td align="left" valign="top" colspan="2">
+<font color="red"><b>PD</b></font>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Comentarios</th>
+<td align="left" valign="top" colspan="2">
+Ninguno</td>
+</tr>
+</table>
+<p />
+<a name="UC-0021" />
+<table border="1" width="100%">
+<tr bgcolor="#c8e0e0">
+<th align="left" valign="top">UC-0021</th>
+<th align="left" valign="top" width="100%" colspan="2">
+Notificar incidencia</th>
+</tr>
+<tr>
+<th align="left" valign="top">Versión</th>
+<td align="left" valign="top" colspan="2">1.0
+            ( 19/12/2023 )
+        </td>
+</tr>
+<tr>
+<th align="left" valign="top">Autores</th>
+<td align="left" valign="top" colspan="2">
+<ul>
+<li>
+<a href="#STK-0004">
+Aarón García Filgueira</a>
+<br />
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<th align="left" valign="top">Fuentes</th>
+<td align="left" valign="top" colspan="2">
+<ul>
+<li>
+<a href="#STK-0001">
+José Ángel Taboada Gonzalez</a>
+<br />
+</li>
+</ul>
 </td>
 </tr>
 <tr>
@@ -4440,19 +4631,9 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#OBJ-0004" title="Sistema de gestión de actividades">
-                                [OBJ-0004] 
-Sistema de gestión de actividades</a>
-</li>
-<li>
 <a href="#OBJ-0002" title="Sistema de gestión de usuarios">
                                 [OBJ-0002] 
 Sistema de gestión de usuarios</a>
-</li>
-<li>
-<a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
-                                [OBJ-0005] 
-Sistema de recomendaciones automáticas</a>
 </li>
 <li>
 <a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
@@ -4460,9 +4641,19 @@ Sistema de recomendaciones automáticas</a>
 Sistema de gestión de chats y grupos</a>
 </li>
 <li>
+<a href="#OBJ-0004" title="Sistema de gestión de actividades">
+                                [OBJ-0004] 
+Sistema de gestión de actividades</a>
+</li>
+<li>
 <a href="#OBJ-0001" title="Sistema de gestión de gastos">
                                 [OBJ-0001] 
 Sistema de gestión de gastos</a>
+</li>
+<li>
+<a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
+                                [OBJ-0005] 
+Sistema de recomendaciones automáticas</a>
 </li>
 </td>
 </tr>
@@ -4538,6 +4729,21 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
+<a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
+                                [OBJ-0005] 
+Sistema de recomendaciones automáticas</a>
+</li>
+<li>
+<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
+                                [OBJ-0002] 
+Sistema de gestión de usuarios</a>
+</li>
+<li>
+<a href="#OBJ-0001" title="Sistema de gestión de gastos">
+                                [OBJ-0001] 
+Sistema de gestión de gastos</a>
+</li>
+<li>
 <a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
                                 [OBJ-0003] 
 Sistema de gestión de chats y grupos</a>
@@ -4546,21 +4752,6 @@ Sistema de gestión de chats y grupos</a>
 <a href="#OBJ-0004" title="Sistema de gestión de actividades">
                                 [OBJ-0004] 
 Sistema de gestión de actividades</a>
-</li>
-<li>
-<a href="#OBJ-0001" title="Sistema de gestión de gastos">
-                                [OBJ-0001] 
-Sistema de gestión de gastos</a>
-</li>
-<li>
-<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
-                                [OBJ-0002] 
-Sistema de gestión de usuarios</a>
-</li>
-<li>
-<a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
-                                [OBJ-0005] 
-Sistema de recomendaciones automáticas</a>
 </li>
 </td>
 </tr>
@@ -4641,6 +4832,11 @@ José Ángel Taboada Gonzalez</a>
 Sistema de gestión de gastos</a>
 </li>
 <li>
+<a href="#OBJ-0004" title="Sistema de gestión de actividades">
+                                [OBJ-0004] 
+Sistema de gestión de actividades</a>
+</li>
+<li>
 <a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
                                 [OBJ-0003] 
 Sistema de gestión de chats y grupos</a>
@@ -4649,11 +4845,6 @@ Sistema de gestión de chats y grupos</a>
 <a href="#OBJ-0002" title="Sistema de gestión de usuarios">
                                 [OBJ-0002] 
 Sistema de gestión de usuarios</a>
-</li>
-<li>
-<a href="#OBJ-0004" title="Sistema de gestión de actividades">
-                                [OBJ-0004] 
-Sistema de gestión de actividades</a>
 </li>
 </td>
 </tr>
@@ -4895,14 +5086,14 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#NFR-0006" title="Lenguaje accesible">
-                                [NFR-0006] 
-Lenguaje accesible</a>
-</li>
-<li>
 <a href="#NFR-0004" title="Interfaz fácil de usar y entender">
                                 [NFR-0004] 
 Interfaz fácil de usar y entender</a>
+</li>
+<li>
+<a href="#NFR-0006" title="Lenguaje accesible">
+                                [NFR-0006] 
+Lenguaje accesible</a>
 </li>
 </td>
 </tr>
