--- a/ENSO_CountApp_REM_Default_Spanish_CRS.html
+++ b/ENSO_CountApp_REM_Default_Spanish_CRS.html
@@ -1058,8 +1058,8 @@ Pablo Guerrica-Echevarría Basterrechea </a>
 <td align="left" valign="top" colspan="2">
 <ul>
 <li>
-<a href="#STK-0002">
-Pablo Guerrica-Echevarría Basterrechea </a>
+<a href="#STK-0001">
+José Ángel Taboada Gonzalez</a>
 <br />
 </li>
 </ul>
@@ -6247,14 +6247,14 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#OBJ-0001" title="Sistema de gestión de gastos">
-                                [OBJ-0001] 
-Sistema de gestión de gastos</a>
-</li>
-<li>
 <a href="#OBJ-0002" title="Sistema de gestión de usuarios">
                                 [OBJ-0002] 
 Sistema de gestión de usuarios</a>
+</li>
+<li>
+<a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
+                                [OBJ-0005] 
+Sistema de recomendaciones automáticas</a>
 </li>
 <li>
 <a href="#OBJ-0004" title="Sistema de gestión de actividades">
@@ -6262,9 +6262,9 @@ Sistema de gestión de usuarios</a>
 Sistema de gestión de actividades</a>
 </li>
 <li>
-<a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
-                                [OBJ-0005] 
-Sistema de recomendaciones automáticas</a>
+<a href="#OBJ-0001" title="Sistema de gestión de gastos">
+                                [OBJ-0001] 
+Sistema de gestión de gastos</a>
 </li>
 <li>
 <a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
@@ -6345,14 +6345,9 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#OBJ-0001" title="Sistema de gestión de gastos">
-                                [OBJ-0001] 
-Sistema de gestión de gastos</a>
-</li>
-<li>
-<a href="#OBJ-0004" title="Sistema de gestión de actividades">
-                                [OBJ-0004] 
-Sistema de gestión de actividades</a>
+<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
+                                [OBJ-0002] 
+Sistema de gestión de usuarios</a>
 </li>
 <li>
 <a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
@@ -6360,14 +6355,19 @@ Sistema de gestión de actividades</a>
 Sistema de gestión de chats y grupos</a>
 </li>
 <li>
-<a href="#OBJ-0002" title="Sistema de gestión de usuarios">
-                                [OBJ-0002] 
-Sistema de gestión de usuarios</a>
+<a href="#OBJ-0004" title="Sistema de gestión de actividades">
+                                [OBJ-0004] 
+Sistema de gestión de actividades</a>
 </li>
 <li>
 <a href="#OBJ-0005" title="Sistema de recomendaciones automáticas">
                                 [OBJ-0005] 
 Sistema de recomendaciones automáticas</a>
+</li>
+<li>
+<a href="#OBJ-0001" title="Sistema de gestión de gastos">
+                                [OBJ-0001] 
+Sistema de gestión de gastos</a>
 </li>
 </td>
 </tr>
@@ -6443,9 +6443,9 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
-                                [OBJ-0003] 
-Sistema de gestión de chats y grupos</a>
+<a href="#OBJ-0001" title="Sistema de gestión de gastos">
+                                [OBJ-0001] 
+Sistema de gestión de gastos</a>
 </li>
 <li>
 <a href="#OBJ-0002" title="Sistema de gestión de usuarios">
@@ -6458,9 +6458,9 @@ Sistema de gestión de usuarios</a>
 Sistema de gestión de actividades</a>
 </li>
 <li>
-<a href="#OBJ-0001" title="Sistema de gestión de gastos">
-                                [OBJ-0001] 
-Sistema de gestión de gastos</a>
+<a href="#OBJ-0003" title="Sistema de gestión de chats y grupos">
+                                [OBJ-0003] 
+Sistema de gestión de chats y grupos</a>
 </li>
 </td>
 </tr>
@@ -6538,11 +6538,6 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#FRQ-0002" title="Gestionar gastos">
-                                [FRQ-0002] 
-Gestionar gastos</a>
-</li>
-<li>
 <a href="#OBJ-0001" title="Sistema de gestión de gastos">
                                 [OBJ-0001] 
 Sistema de gestión de gastos</a>
@@ -6551,6 +6546,11 @@ Sistema de gestión de gastos</a>
 <a href="#OBJ-0002" title="Sistema de gestión de usuarios">
                                 [OBJ-0002] 
 Sistema de gestión de usuarios</a>
+</li>
+<li>
+<a href="#FRQ-0002" title="Gestionar gastos">
+                                [FRQ-0002] 
+Gestionar gastos</a>
 </li>
 </td>
 </tr>
@@ -6704,14 +6704,14 @@ José Ángel Taboada Gonzalez</a>
 <th align="left" valign="top">Dependencias</th>
 <td align="left" valign="top" colspan="1">
 <li>
-<a href="#NFR-0004" title="Interfaz fácil de usar y entender">
-                                [NFR-0004] 
-Interfaz fácil de usar y entender</a>
-</li>
-<li>
 <a href="#NFR-0006" title="Lenguaje accesible">
                                 [NFR-0006] 
 Lenguaje accesible</a>
+</li>
+<li>
+<a href="#NFR-0004" title="Interfaz fácil de usar y entender">
+                                [NFR-0004] 
+Interfaz fácil de usar y entender</a>
 </li>
 </td>
 </tr>
@@ -6776,7 +6776,7 @@ Matrices de trazabilidad</h1><a name="TRM-0001" />
                 -
             </td>
 <td align="center" valign="top">
-<img src="&#xA;C:\Users\Usuario\Documents\ENSO\REM\xml\default\trace.gif&#xA;" />
+<img src="&#xA;C:\Users\Pablo\Documents\EnxeÃ±arÃ­a InformÃ¡tica\Terceiro\1Âº Cuatrimestre\EnxeÃ±arÃ­a do Software\PrÃ¡cticas\Practica5_2_REM\REM\xml\default\trace.gif&#xA;" />
 </td>
 <td align="center" valign="top">
                 -
@@ -6793,7 +6793,7 @@ Matrices de trazabilidad</h1><a name="TRM-0001" />
 <a href="&#xA;                        #FRQ-0002" title="Gestionar gastos">FRQ-0002</a>
 </th>
 <td align="center" valign="top">
-<img src="&#xA;C:\Users\Usuario\Documents\ENSO\REM\xml\default\trace.gif&#xA;" />
+<img src="&#xA;C:\Users\Pablo\Documents\EnxeÃ±arÃ­a InformÃ¡tica\Terceiro\1Âº Cuatrimestre\EnxeÃ±arÃ­a do Software\PrÃ¡cticas\Practica5_2_REM\REM\xml\default\trace.gif&#xA;" />
 </td>
 <td align="center" valign="top">
                 -
@@ -6822,7 +6822,7 @@ Matrices de trazabilidad</h1><a name="TRM-0001" />
                 -
             </td>
 <td align="center" valign="top">
-<img src="&#xA;C:\Users\Usuario\Documents\ENSO\REM\xml\default\trace.gif&#xA;" />
+<img src="&#xA;C:\Users\Pablo\Documents\EnxeÃ±arÃ­a InformÃ¡tica\Terceiro\1Âº Cuatrimestre\EnxeÃ±arÃ­a do Software\PrÃ¡cticas\Practica5_2_REM\REM\xml\default\trace.gif&#xA;" />
 </td>
 <td align="center" valign="top">
                 -
@@ -6839,7 +6839,7 @@ Matrices de trazabilidad</h1><a name="TRM-0001" />
                 -
             </td>
 <td align="center" valign="top">
-<img src="&#xA;C:\Users\Usuario\Documents\ENSO\REM\xml\default\trace.gif&#xA;" />
+<img src="&#xA;C:\Users\Pablo\Documents\EnxeÃ±arÃ­a InformÃ¡tica\Terceiro\1Âº Cuatrimestre\EnxeÃ±arÃ­a do Software\PrÃ¡cticas\Practica5_2_REM\REM\xml\default\trace.gif&#xA;" />
 </td>
 <td align="center" valign="top">
                 -
